# simple-timer

./: CMakeLists.txt  README.md  simple_timer.cpp  simple_timer.f90  simple_timer.h
util/timer/: CMakeLists.txt  Makefile  README.md  main.c  main.f90  simple_timer.cpp
